# RIK_labs

./: .gitignore
lab1/: test1.txt  wfp1.txt  wfp2.txt
lab1/WinFormsApp/WinFormsApp/: Form1.Designer.cs  Form1.cs
lab1/WpfApp1/WpfApp1/: MainWindow.xaml  MainWindow.xaml.cs
lab2/text-editor/: index.html  main.js  package-lock.json  package.json  renderer.js  style.css
lab3/: CMakeLists.txt
lab3/text2/texteditor/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
lab3/texteditor/: CMakeLists.txt
lab4/: android_release.keystore
lab4/coffee/: CMakeLists.txt  Main.qml  main.cpp
lab4/coffee_editor/: CMakeLists.txt  Main.qml  filehandler.h  main.cpp
lab4/coffee_editor/android/: AndroidManifest.xml
lab4/texteditor/: App.qml  CMakeLists.txt  Main.cpp  filehandler.h  qml.qrc  qtquickcontrols2.conf
lab4/texteditor/android/: AndroidManifest.xml
lab5/weather-app/: package-lock.json  package.json
lab5/weather-app/src/: App.css  App.jsx
lab5/weather-app/src/pages/: About.jsx  MapView.jsx  Statistics.jsx  WeatherHome.jsx
lab6/bongo_cat_vue/: package-lock.json
lab6/bongo_cat_vue/frontend/: package-lock.json  package.json  vite.config.js
lab6/bongo_cat_vue/frontend/src/: App.vue  main.js
lab6/bongo_cat_vue/frontend/src/assets/: main.css
lab6/bongo_cat_vue/frontend/src/assets/css/: Cat.css
lab6/bongo_cat_vue/frontend/src/router/: index.js
lab6/bongo_cat_vue/frontend/src/views/: About.vue  Cat.vue  CatGame.vue  Statistics.vue
